# p2pfl

./: .buildinfo  .dockerignore  .flake8  .gitignore  CONTRIBUTING.md  Dockerfile  Pipfile  README.md  Untitled.ipynb  api.html  contributing.html  data.json  documentation.html  example.py  femnist.py  genindex.html  index.html  installation.html  introduction.html  library_design.html  modules.html  mypy.ini  node.py  node_connection.py  nodo1.py  nodo2.py  objects.inv  p2pfl.html  p2pfl.learning.aggregators.html  p2pfl.learning.agregators.html  p2pfl.learning.html  p2pfl.learning.pytorch.html  p2pfl.learning.pytorch.learners.html  p2pfl.learning.pytorch.mnist_examples.html  p2pfl.learning.pytorch.mnist_examples.models.html  p2pfl.learning.pytorch.utils.html  p2pfl.utils.html  p2pfl_ws.html  pinger.py  prueba.py  (+11 more)
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  pull_request_template.md
Diagramas/: .$agg sec.drawio.bkp  .$agg sec.drawio.dtmp  .$class1.drawio.bkp  .$class1.drawio.dtmp  .$class2.drawio.bkp  .$class2.drawio.dtmp  .$class4.drawio.bkp  .$class4.drawio.dtmp  .$class6.drawio.bkp  .$class6.drawio.dtmp  .$cu1.drawio.bkp  .$cu2.drawio.bkp  .$cu2.drawio.dtmp  .$diagrama flujo fallido.drawio.bkp  .$diagrama secuencia fallido.drawio.bkp  .$gossip sequence 2.drawio.bkp  .$gossip sequence1.bkp  .$gossip sequence1.dtmp  .$start learning sec.drawio.bkp  agg sec.drawio  class1.drawio  class2.drawio  class4.drawio  class6.drawio  cu1.drawio  cu2.drawio  diagrama secuencia fallido.drawio  gossip sequence 1.drawio  gossip sequence 2.drawio  sec1.drawio  start learning sec.drawio
_modules/: index.html
_sources/: api.rst.txt  contributing.md.txt  documentation.rst.txt  index.md.txt  index.rst.txt  installation.md.txt  library_design.md.txt  p2pfl.learning.pytorch.learners.rst.txt  p2pfl.learning.pytorch.utils.rst.txt  p2pfl.learning.rst.txt  p2pfl.rst.txt  p2pfl_ws.md.txt  quickstart.md.txt
components/: commands.html  communication.html  comp-index.html  logger.html  node.html  state.html  workflows.html
doc/: documentation.html  genindex.html  library_design.html  objects.inv  p2pfl.learning.pytorch.html  p2pfl.learning.pytorch.mnist_examples.html  quickstart.html  search.html
docs/: README.md
examples/: femnist.py  mnist.py  node1.py  node2.py  nodo1.py  nodo2.py  p2pfl_web.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_02de53f368cc32f7_generate_proto_py.html  z_02de53f368cc32f7_node_pb2_grpc_py.html  z_02de53f368cc32f7_node_pb2_py.html  z_031b5723d42530f3_keras_logger_py.html  z_031b5723d42530f3_scaffold_callback_py.html  z_078212527ced674d_async_logger_py.html  z_078212527ced674d_file_logger_py.html  z_078212527ced674d_logger_decorator_py.html  z_078212527ced674d_ray_logger_py.html  z_078212527ced674d_singleton_logger_py.html  z_078212527ced674d_wandb_logger_py.html  z_078212527ced674d_web_logger_py.html  z_1519f345475e61a7___init___py.html  z_1519f345475e61a7_base_py.html  z_1519f345475e61a7_fedadagrad_py.html  z_1519f345475e61a7_fedadam_py.html  z_1519f345475e61a7_fedyogi_py.html  z_27e8214e270b5bab_fedprox_callback_py.html  z_27e8214e270b5bab_scaffold_callback_py.html  z_3b18d5f8a4c1dd70_generate_proto_py.html  z_3b18d5f8a4c1dd70_node_pb2_grpc_py.html  z_3b18d5f8a4c1dd70_node_pb2_py.html  z_3da7607af37f1369___main___py.html  z_3da7607af37f1369_cli_py.html  z_3da7607af37f1369_exceptions_py.html  z_3da7607af37f1369_experiment_py.html  z_3da7607af37f1369_node_py.html  z_3da7607af37f1369_node_state_py.html  z_3da7607af37f1369_settings_py.html  z_3da7607af37f1369_utils_py.html  z_40072ca5f43cf326_client_py.html  z_40072ca5f43cf326_gossiper_py.html  z_40072ca5f43cf326_heartbeater_py.html  z_40072ca5f43cf326_neighbors_py.html  z_40072ca5f43cf326_protobuff_communication_protocol_py.html  z_40072ca5f43cf326_server_py.html  (+146 more)
merda/: events.out.tfevents.1688501603.MacBook-Pro-de-Pedro-2.local.5477.1
modules/: modules.html  p2pfl.cli.html  p2pfl.commands.add_model_command.html  p2pfl.commands.command.html  p2pfl.commands.heartbeat_command.html  p2pfl.commands.html  p2pfl.commands.init_model_command.html  p2pfl.commands.metrics_command.html  p2pfl.commands.model_initialized_command.html  p2pfl.commands.models_agregated_command.html  p2pfl.commands.models_ready_command.html  p2pfl.commands.start_learning_command.html  p2pfl.commands.stop_learning_command.html  p2pfl.commands.vote_train_set_command.html  p2pfl.communication.client.html  p2pfl.communication.commands.command.html  p2pfl.communication.commands.html  p2pfl.communication.commands.message.heartbeat_command.html  p2pfl.communication.commands.message.html  p2pfl.communication.commands.message.metrics_command.html  p2pfl.communication.commands.message.model_initialized_command.html  p2pfl.communication.commands.message.models_agregated_command.html  p2pfl.communication.commands.message.models_ready_command.html  p2pfl.communication.commands.message.pre_send_model_command.html  p2pfl.communication.commands.message.start_learning_command.html  p2pfl.communication.commands.message.stop_learning_command.html  p2pfl.communication.commands.message.vote_train_set_command.html  p2pfl.communication.commands.weights.full_model_command.html  p2pfl.communication.commands.weights.html  p2pfl.communication.commands.weights.init_model_command.html  p2pfl.communication.commands.weights.partial_model_command.html  p2pfl.communication.communication_protocol.html  p2pfl.communication.exceptions.html  p2pfl.communication.gossiper.html  p2pfl.communication.grpc.address.html  p2pfl.communication.grpc.grpc_client.html  p2pfl.communication.grpc.grpc_communication_protocol.html  p2pfl.communication.grpc.grpc_neighbors.html  p2pfl.communication.grpc.grpc_server.html  p2pfl.communication.grpc.html  (+154 more)
p2pfl/: __init__.py  __main__.py  agregator.py  base_node.py  cli.py  command.py  communication_protocol.py  const.py  encrypter.py  exceptions.py  experiment.py  gossiper.py  heartbeater.py  messages.py  neighbors.py  node copy.py  node.py  node_connection.py  node_state.py  pinger.py  settings.py  utils.py
(+956 files in other folders)
