[tool.poetry]
name = "p2pfl"
version = "0.3.0"
description = "A p2p federated learning framework"
authors = ["Pedro Guijas <pguijas@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"
homepage = "https://pguijas.github.io/p2pfl/"
repository = "https://github.com/pguijas/p2pfl"
documentation = "https://pguijas.github.io/p2pfl"
keywords = ["federated learning", "fl", "peer to peer", "p2p", "decentralized", "data privacy", "data security", "pytorch"]

[tool.poetry.dependencies]
python = "^3.9"
grpcio = "^1.62.0"
grpcio-tools = "^1.62.0"
matplotlib = "^3.8.3"
psutil = "^5.9.8"
numpy = ">=1.20,<2.0"
torch = {version = "^2.2.1", optional = true}
pytorch-lightning = {version = "^1.2.1", optional = true}
torchvision = {version = "^0.17.1", optional = true}
torchmetrics = {version = "^1.3.1", optional = true}
typer = "^0.12.3"
black = "^24.4.2"


[tool.poetry.extras]
torch = ["torch", "torchvision", "torchmetrics", "pytorch-lightning"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
ruff = "^0.5.1"
mypy = "^1.8.0"
mypy-protobuf = "^3.5.0"
types-protobuf = "^5.27.0.20240626"
types-requests = "^2.32.0.20240712"

[tool.poetry.group.docs.dependencies]
Sphinx = "^7.2.6"
myst-parser = "^2.0.0"
furo = "^2024.1.29"
sphinx-autodoc-typehints = "^2.2.3"
sphinxcontrib-mermaid = "^0.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
exclude = ["p2pfl/communication/grpc/proto", "docs"]

[tool.ruff.lint]
select = [
    # docstring
    "D",
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # Pycodestyle warnings
    "W",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # comprehensions
    "C4"
]
fixable = ["E", "F", "W", "B", "SIM", "I", "C4"]
ignore = ["B027", "D203", "D212", "D406", "D407"]

# pyproject.toml
[tool.pytest.ini_options]
addopts = "-v --cov=p2pfl"

[tool.coverage.run]
relative_files = true

[tool.mypy]
exclude = "p2pfl/proto"
disallow_untyped_calls = true

[[tool.mypy.overrides]]
module = "grpc.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "torchvision.*"
ignore_missing_imports = true

[tool.poetry.scripts]
p2pfl = "p2pfl.cli:app"