[tool.poetry]
name = "p2pfl"
version = "0.4.2"
description = "A p2p federated learning framework"
authors = ["Pedro Guijas <pguijas@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"
homepage = "https://p2pfl.com"
repository = "https://github.com/p2pfl/p2pfl"
documentation = "https://p2pfl.github.io/p2pfl/"
keywords = ["federated learning", "fl", "peer to peer", "p2p", "decentralized", "data privacy", "data security", "pytorch"]

[tool.poetry.dependencies]
python = "^3.10"
grpcio = "^1.62.0"
grpcio-tools = "^1.62.0"
matplotlib = "^3.8.3"
psutil = "^5.9.8"
numpy = ">=1.20,<2.0"
torch = {version = "^2.2.1", optional = true}
torchvision = {version = "^0.17.1", optional = true}
torchmetrics = {version = "^1.3.1", optional = true}
lightning = {version = "^2.4.0", optional = true}
typer = "^0.12.3"
ray = "^2.43.0"
tensorflow = {version = "^2.18.0", optional = true}
types-tensorflow = {version = "^2.17.0.20240820", optional = true}
keras = {version = "^3.5.0", optional = true}
datasets = "2.15.0"
flax = {version = "^0.10.0", optional = true}
pandas = "^2.2.3"
tqdm = "^4.67.0"
protobuf = ">=5.29.1"
pyyaml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
ruff = "^0.5.1"
mypy = "^1.15.0"
mypy-protobuf = "^3.5.0"
types-protobuf = "^5.27.0.20240626"
types-requests = "^2.32.0.20240712"
ipykernel = "^6.29.5"
pandas-stubs = "^2.2.3.241126"
types-pyyaml = "^6.0.12.20241230"
types-tqdm = "^4.67.0.20241119"

[tool.poetry.group.docs.dependencies]
Sphinx = "^7.2.6"
myst-parser = "^2.0.0"
furo = "^2024.1.29"
sphinx-autodoc-typehints = "^2.2.3"
sphinxcontrib-mermaid = "^0.9.2"
sphinx-design = "^0.6.1"

[tool.poetry.extras]
torch = ["torch", "torchvision", "torchmetrics", "lightning"]
tensorflow = ["tensorflow", "keras", "types-tensorflow"]
flax = ["flax"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 140
exclude = ["p2pfl/communication/protocols/protobuff/proto", "docs"]

[tool.ruff.lint]
select = [
    # docstring
    "D",
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # Pycodestyle warnings
    "W",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # comprehensions
    "C4"
]
fixable = ["E", "F", "W", "B", "SIM", "I", "C4"]
ignore = ["B027", "D203", "D212", "D406", "D407"]

# pyproject.toml
[tool.pytest.ini_options]
addopts = "-v --cov=p2pfl"

[tool.coverage.run]
relative_files = true

[tool.mypy]
exclude = "p2pfl/proto"
disallow_untyped_calls = true

[[tool.mypy.overrides]]
module = "grpc.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "torchvision.*"
ignore_missing_imports = true

[tool.poetry.scripts]
p2pfl = "p2pfl.management.cli:app"